# uuid-perf-test

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
benchmarks/: timer.py
benchmarks/mongo/: analyze.py  bench_insert.py  bench_select.py  bench_update.py
benchmarks/postgres/: analyze.py  bench_insert.py  bench_select.py  bench_update.py
config/: settings.py
db/mongo/: init.py
db/postgres/: init.py  schema_v4.sql  schema_v7.sql
generators/: data_factory.py  distribution.py  generate_csv.py  uuid_factory.py
loaders/: load_mongo.py  load_postgres.py
reports/: collector.py  formatter.py
runner/: run_all.py  run_mongo.py  run_postgres.py
