[project]
name = "uuid-bench"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1",
    "pymongo>=4.6",
    "uuid7>=0.1",
    "faker>=24.0",
    "numpy>=1.26",
    "tabulate>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "config",
    "db",
    "generators",
    "loaders",
    "benchmarks",
    "reports",
    "runner",
]
